added responders and agencys to domains

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
-    <div class="pull-right">
-        Example text
-    </div>
-    <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2015
-    </div>
+  <div class="pull-right">
+    <small>Made in America</small>
+  </div>
+  <div>
+    <strong>Copyright</strong> RespondersNOW.com &copy; 2016-2017
+  </div>
 </div>
