--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">FirstRespondersNOW.com</a>
+        <a class="navbar-brand" href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">RespondersNOW.com</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
