--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -2,15 +2,27 @@
   <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
       <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-      <form role="search" class="navbar-form-custom" method="post" action="">
-        <div class="form-group">
-          <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search"/>
-        </div>
-      </form>
+      <!--<form role="search" class="navbar-form-custom" method="post" action="">-->
+      <!--<div class="form-group">-->
+      <!--<input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search"/>-->
+      <!--</div>-->
+      <!--</form>-->
     </div>
     <ul class="nav navbar-top-links navbar-right">
       <li>
-        <span class="m-r-sm text-muted welcome-message" data-i18n="topnav.welcometext">Welcome to INSPINIA+ Admin Theme.</span>
+        <!---->
+        <% if responder_signed_in? %>
+          <li>
+            <%= link_to('Logout', destroy_responder_session_path, :method => :delete) %>
+          </li>
+      <% else %>
+          <li>
+            <%= link_to('Login', new_responder_session_path) %>
+          </li>
+      <% end %>
+      <!---->
+      <%= link_to 'sign out', destroy_responder_session_path, data: {method: :delete}, class: 'm-r-sm text-muted welcome-message' if current_responder %>
+      <!--<span class="m-r-sm text-muted welcome-message" data-i18n="topnav.welcometext">Welcome to INSPINIA+ Admin Theme.</span>-->
       </li>
       <li class="dropdown">
         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -108,12 +120,6 @@
         </ul>
       </li>
 
-
-      <li>
-        <%- if controller_name != 'sessions' %>
-            <%= link_to 'Sign out', destroy_session_path(resource_name) %><br/>
-        <% end -%>
-      </li>
 
       <li>
         <a class="right-sidebar-toggle">
