[1-set-up-responders][ RJ ] configured some more mail settings.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,9 +9,7 @@
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
                             <span class="block m-t-xs">
-                                <strong class="font-bold">David Williams</strong>
-                            </span> <span class="text-muted text-xs block">Art Director <b class="caret"></b></span>
-                        </span>
+                              <strong class="font-bold">Robert Robinson</strong></span> <span class="text-muted text-xs block">EMT - P <b class="caret"></b></span></span>
           </a>
           <ul class="dropdown-menu animated fadeInRight m-t-xs">
             <li><a href="">Profile</a>
