[1-set-up-responders][ RJ ] updated and corrected the tests!

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
             <span class="clear">
               <span class="block m-t-xs">
-                <strong class="font-bold">Robert Robinson</strong>
+                <strong class="font-bold"><%= "#{current_responder.first_name} #{current_responder.last_name}" %></strong>
               </span>
               <span class="text-muted text-xs block">
                 EMT New Jersey<b class="caret"></b>
