[2-add-work-history][ RJ ] converted all files

--- a/app/views/pages/internal_server_error.html.erb
+++ b/app/views/pages/internal_server_error.html.erb
@@ -1,4 +1,4 @@
-﻿    <div class="middle-box text-center animated fadeInDown">
+    <div class="middle-box text-center animated fadeInDown">
         <h1>500</h1>
         <h3 class="font-bold">Internal Server Error</h3>
 
