--- a/app/views/pages/invoice_print.html.erb
+++ b/app/views/pages/invoice_print.html.erb
@@ -1,4 +1,4 @@
-﻿    <div class="wrapper wrapper-content p-xl">
+    <div class="wrapper wrapper-content p-xl">
         <div class="ibox-content p-xl">
             <div class="row">
                 <div class="col-sm-6">
