--- a/app/views/pages/lockscreen.html.erb
+++ b/app/views/pages/lockscreen.html.erb
@@ -1,4 +1,4 @@
-﻿<div class="lock-word animated fadeInDown">
+<div class="lock-word animated fadeInDown">
     <span class="first-word">LOCKED</span><span>SCREEN</span>
 </div>
 <div class="middle-box text-center lockscreen animated fadeInDown">
