--- a/app/views/pages/not_found_error.html.erb
+++ b/app/views/pages/not_found_error.html.erb
@@ -1,4 +1,4 @@
-﻿    <div class="middle-box text-center animated fadeInDown">
+    <div class="middle-box text-center animated fadeInDown">
         <h1>404</h1>
         <h3 class="font-bold">Page Not Found</h3>
 
