--- a/app/views/pages/forgot_password.html.erb
+++ b/app/views/pages/forgot_password.html.erb
@@ -1,4 +1,4 @@
-﻿<div class="passwordBox animated fadeInDown">
+<div class="passwordBox animated fadeInDown">
     <div class="row">
 
         <div class="col-md-12">
