--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,4 +1,4 @@
-﻿    <div class="middle-box text-center loginscreen  animated fadeInDown">
+    <div class="middle-box text-center loginscreen  animated fadeInDown">
         <div>
             <div>
 
