--- a/app/views/pages/login_2.html.erb
+++ b/app/views/pages/login_2.html.erb
@@ -1,4 +1,4 @@
-﻿    <div class="loginColumns animated fadeInDown">
+    <div class="loginColumns animated fadeInDown">
         <div class="row">
 
             <div class="col-md-6">
