[rnow-3][ RJ ] refactored to have workhistory scoped to responder

--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -4,6 +4,9 @@
     <i class="fa fa-star"></i> <span class="nav-label">FAQ </span>
   </a>
 </li>
+<li>
+  <%= link_to 'Work History', responder_work_histories_path(current_responder) %>
+</li>
 <li class="">
   <a href=""><i class="fa fa-th-large"></i>
     <span class="nav-label" data-i18n="nav.dashboard">Work History</span>
