--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -1,66 +1,66 @@
 <div class="wrapper wrapper-content">
   <!--MAYBE ????? -->
-  <div class="row m-b-lg m-t-lg">
-    <div class="col-md-6">
+  <!--<div class="row m-b-lg m-t-lg">-->
+  <!--<div class="col-md-6">-->
 
-      <div class="profile-image">
-        <img src="<%= image_path('a4.jpg') %>" class="img-circle circle-border m-b-md" alt="profile">
-      </div>
-      <div class="profile-info">
-        <div class="">
-          <div>
-            <h2 class="no-margins">
-              Alex Smith
-            </h2>
-            <h4>Founder of Groupeq</h4>
-            <small>
-              There are many variations of passages of Lorem Ipsum available, but the majority
-              have suffered alteration in some form Ipsum available.
-            </small>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <table class="table small m-b-xs">
-        <tbody>
-        <tr>
-          <td>
-            <strong>142</strong> Projects
-          </td>
-          <td>
-            <strong>22</strong> Followers
-          </td>
+  <!--<div class="profile-image">-->
+  <!--<img src="<%= image_path('a4.jpg') %>" class="img-circle circle-border m-b-md" alt="profile">-->
+  <!--</div>-->
+  <!--<div class="profile-info">-->
+  <!--<div class="">-->
+  <!--<div>-->
+  <!--<h2 class="no-margins">-->
+  <!--Alex Smith-->
+  <!--</h2>-->
+  <!--<h4>Founder of Groupeq</h4>-->
+  <!--<small>-->
+  <!--There are many variations of passages of Lorem Ipsum available, but the majority-->
+  <!--have suffered alteration in some form Ipsum available.-->
+  <!--</small>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--<div class="col-md-3">-->
+  <!--<table class="table small m-b-xs">-->
+  <!--<tbody>-->
+  <!--<tr>-->
+  <!--<td>-->
+  <!--<strong>142</strong> Projects-->
+  <!--</td>-->
+  <!--<td>-->
+  <!--<strong>22</strong> Followers-->
+  <!--</td>-->
 
-        </tr>
-        <tr>
-          <td>
-            <strong>61</strong> Comments
-          </td>
-          <td>
-            <strong>54</strong> Articles
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <strong>154</strong> Tags
-          </td>
-          <td>
-            <strong>32</strong> Friends
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-md-3">
-      <small>Sales in last 24h</small>
-      <h2 class="no-margins">206 480</h2>
-      <div id="sparkline1"></div>
-    </div>
+  <!--</tr>-->
+  <!--<tr>-->
+  <!--<td>-->
+  <!--<strong>61</strong> Comments-->
+  <!--</td>-->
+  <!--<td>-->
+  <!--<strong>54</strong> Articles-->
+  <!--</td>-->
+  <!--</tr>-->
+  <!--<tr>-->
+  <!--<td>-->
+  <!--<strong>154</strong> Tags-->
+  <!--</td>-->
+  <!--<td>-->
+  <!--<strong>32</strong> Friends-->
+  <!--</td>-->
+  <!--</tr>-->
+  <!--</tbody>-->
+  <!--</table>-->
+  <!--</div>-->
+  <!--<div class="col-md-3">-->
+  <!--<small>Sales in last 24h</small>-->
+  <!--<h2 class="no-margins">206 480</h2>-->
+  <!--<div id="sparkline1"></div>-->
+  <!--</div>-->
 
 
-  </div>
-  <!--^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-->
+  <!--</div>-->
+  <!--&lt;!&ndash;^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^&ndash;&gt;-->
   <%= render partial: 'responders/responder_metrics' %>
   <div class="row">
     <div class="col-lg-12">
