--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -17,11 +17,11 @@
           <li><a class="page-scroll" href="#team">Team</a></li>
           <li><a class="page-scroll" href="#team">Features</a></li>
           <li><a class="page-scroll" href="#pricing">Agency<br>Login</a></li>
-          <li><%= link_to new_responder_session_path, class: 'page-scroll' do %>
+
+          <li><%= link_to auth_responders_path, class: 'page-scroll' do %>
                 Responder<br> Login
             <% end %>
           </li>
-          <!--<li><a class="page-scroll" href="#contact">Responder<br>Login</a></li>-->
         </ul>
       </div>
     </div>
