[rnow-3][ RJ ] added 2 new models

--- a/app/assets/stylesheets/base/skins.scss
+++ b/app/assets/stylesheets/base/skins.scss
@@ -1,6 +1,6 @@
 /*
  *
- *   SKIN 1 - INSPINIA - Responsive Admin Theme
+ *   SKIN 1 - RespondersNOW.com
  *   NAME - Blue light
  *
 */
@@ -138,7 +138,7 @@ body.skin-1 {
 
 /*
  *
- *   SKIN 2 - INSPINIA - Responsive Admin Theme
+ *   SKIN 2 - RespondersNOW.com
  *   NAME - Inspinia Ultra
  *
 */
@@ -327,7 +327,7 @@ body.skin-2 #wrapper {
 
 /*
  *
- *   SKIN 3 - INSPINIA - Responsive Admin Theme
+ *   SKIN 3 - RespondersNOW.com
  *   NAME - Yellow/purple
  *
 */
