--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,3 +1,6 @@
+<head>
+  <title>RespondersNOW</title>
+</head>
 <div class="navbar-wrapper">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -27,7 +30,7 @@
     </div>
   </nav>
 </div>
-<div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
+<div id="inSlider" class="carousel carousel-fade blur" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#inSlider" data-slide-to="0" class="active"></li>
     <li data-target="#inSlider" data-slide-to="1"></li>
