--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -5,15 +5,9 @@
   </a>
 </li>
 <li>
-  <%= link_to 'Work History', responder_work_histories_path(current_responder) %>
-</li>
-<li class="">
-  <a href=""><i class="fa fa-th-large"></i>
-    <span class="nav-label" data-i18n="nav.dashboard">Work History</span>
-    <span class="fa arrow"></span></a>
-  <ul class="nav nav-second-level collapse <%= is_active_controller('dashboards') %>">
-    <li class="<%= is_active_action('dashboard_1') %>"><%= link_to "Add New", new_work_history_path %></li>
-  </ul>
+  <%= link_to responder_work_histories_path(current_responder) do %>
+      <i class="fa fa-star"></i> <span class="nav-label">Work History</span>
+  <% end %>
 </li>
 <li class="">
   <a href="#">
