[rnow-3][ RJ ] added certifications

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,7 +27,7 @@
         </div>
       </li>
       <%= render partial: 'responders/main_nav' if current_responder %>
-      <% if false %>
+      <% if true %>
           <li class="<%= is_active_controller('dashboards') %>">
             <a href=""><i class="fa fa-th-large"></i>
               <span class="nav-label" data-i18n="nav.dashboard">Dashboards</span>
