--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-<!--<%= render 'layouts/skinconfig' %>-->
+<%= render 'layouts/skinconfig' %>
 <div id="wrapper" class="<%= params[:controller] %>.<%= params[:action] %>">
 
   <%= render 'layouts/navigation' %>
