added some basic autocomplete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-<%= render 'layouts/skinconfig' %>
+<!--<%= render 'layouts/skinconfig' %>-->
 <div id="wrapper" class="<%= params[:controller] %>.<%= params[:action] %>">
 
   <%= render 'layouts/navigation' %>
