--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -58,7 +58,7 @@
         <div class="ibox-content">
           <%= simple_form_for @certification, class: 'col-sm-6' do |f| %>
               <div class="form-group">
-                <%= f.association :certification, class: 'col-sm-8' %>
+                <%= f.association :certification, collection: Certification.order(:name), class: 'col-sm-8' %>
                 <small>Are we missing your cert? <a>Request it</a></small>
               </div>
               <div class="form-group form-inline">
