--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -10,7 +10,7 @@
           <tr>
             <th>Name</th>
             <th>Date Aquired</th>
-            <th>Verified</th>
+            <th style="text-align: center;">Verified</th>
             <th>
               <%= link_to '/', class: 'btn btn-success btn-xs btn-block btn-outline' do %>
                   <i class="fa fa-cloud-download"></i> Download All
@@ -30,7 +30,7 @@
               <tr class="gradeX">
                 <td><%= cert.certification.name %></td>
                 <td><%= cert.aquired_on %></td>
-                <td class="center"><i class="center fa fa-check"></i></td>
+                <td class="center" style="text-align: center;"><i class="center fa fa-check"></i></td>
                 <td class="center">
                   <%= link_to cert.document.url, class: 'btn btn-info btn-xs btn-block btn-outline' do %>
                       <i class="fa fa-file-pdf-o"></i> PDF
@@ -57,6 +57,7 @@
         <h5>Add Certification / License</h5>
         <div class="ibox-content">
           <%= simple_form_for @certification, class: 'col-sm-6' do |f| %>
+              <%= error_messages_for @certification %>
               <div class="form-group">
                 <%= f.association :certification, collection: Certification.order(:name), class: 'col-sm-8' %>
                 <small>Are we missing your cert? <a>Request it</a></small>
@@ -71,10 +72,10 @@
                             end_year: Date.today.year, discard_day: true,
                             order: [:month, :year], label: 'Expires ?', id: 'wh-end-date' %> <br>
                 <div>
-                  <%= f.input :expires, label: 'Does Not Expire', class: 'form-inline' %>
+                  <%= f.input_field :expires, as: :boolean, class: 'check_box', inline_label: 'Does Not Expire', as: :boolean, checked_value: true, unchecked_value: false %>
                 </div>
                 <div>
-                  <%= f.input :primary, label: 'Primary', class: 'form-inline' %>
+                  <%= f.input_field :primary, as: :boolean, class: 'check_box', inline_label: 'Primary', as: :boolean, checked_value: true, unchecked_value: false %>
                   <br>
                   <%= f.input :document, label: 'Upload PDF', as: :file %>
                 </div>
