updated wh panel

--- a/app/views/work_histories/_agency_history.html.erb
+++ b/app/views/work_histories/_agency_history.html.erb
@@ -11,10 +11,11 @@
         <div class="col-sm-8">
           <h3><strong><%= agency.name %></strong></h3>
           <!--STAR AND END DATES-->
-          <p><%= history.pretty_start %> to <%= history.pretty_end %> | <%= history.title %> </p>
-          <p><i class="fa fa-map-marker"></i> North Brunswick, NJ</p>
+          <p><%= history.pretty_start %> to <%= history.pretty_end %></p>
+          <p><%= history.status %> - <%= history.title %></p>
           <p><i class="fa fa-ambulance"></i> 911 - Heavy Rescue</p>
           <address>
+            <i class="fa fa-map-marker"></i>
             880 Ridgewood Ave<br>
             North Brunswick, NJ 08902<br>
             <abbr title="Phone">P:</abbr> 732-545-1525
