--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -2,7 +2,7 @@
   <div class="col-lg-6">
     <!---->
     <div class="ibox-title">
-      <h5>Certifications / Licenses</h5>
+      <h5>Documents</h5>
       <div class="ibox-content">
 
         <table class="table table-striped table-bordered table-hover dataTables-example">
@@ -54,7 +54,7 @@
   <div class="col-lg-6">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Add Certification / License</h5>
+        <h5>Add Document</h5>
         <div class="ibox-content">
           <%= simple_form_for @certification, class: 'col-sm-6' do |f| %>
               <%= error_messages_for @certification %>
