[improve-user-profile][ RJ ] updated to latest version of rails

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
             </span>
           </a>
           <ul class="dropdown-menu animated fadeInRight m-t-xs">
-            <li><a href="">Profile</a></li>
+            <li><a href="<%= edit_responder_url(current_responder) %>">Profile</a></li>
             <li><a href="">Settings</a></li>
             <li><a href="">Mailbox</a></li>
           </ul>
