--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -1,3 +1,64 @@
+<div class="wrapper wrapper-content  animated fadeInRight">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="ibox">
+        <div class="ibox-title">
+          <h5>Documents</h5>
+          <div class="ibox-tools">
+            <a href="" class="btn btn-primary btn-xs">Add New Document</a>
+          </div>
+          <br>
+          <div class="row">
+            <div class="ibox-content">
+              <table class="table table-striped table-bordered table-hover dataTables-example">
+                <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Date Aquired</th>
+                  <th style="text-align: center;">Verified</th>
+                  <th>
+                    <%= link_to '/', class: 'btn btn-success btn-xs btn-block btn-outline' do %>
+                        <i class="fa fa-cloud-download"></i> Download All
+                    <% end %>
+                  </th>
+                  <th>
+                    <%= button_to '/', class: 'btn btn-danger btn-xs btn-block btn-outline',
+                                  method: :delete,
+                                  confirm: 'Are you sure you want to delete this?' do %>
+                        <i class="fa fa-trash"></i> Delete All
+                    <% end %>
+                  </th>
+                </tr>
+                </thead>
+                <tbody>
+                <% current_responder.aquired_certifications.each do |cert| %>
+                    <tr class="gradeX">
+                      <td><%= cert.certification.name %></td>
+                      <td><%= cert.aquired_on %></td>
+                      <td class="center" style="text-align: center;"><i class="center fa fa-check"></i></td>
+                      <td class="center">
+                        <%= link_to cert.document.url, class: 'btn btn-info btn-xs btn-block btn-outline' do %>
+                            <i class="fa fa-file-pdf-o"></i> PDF
+                        <% end %>
+                      </td>
+                      <td class="center">
+                        <%= button_to aquired_certification_path(cert.id), class: 'btn btn-danger btn-xs btn-block btn-outline',
+                                      method: :delete,
+                                      confirm: 'Are you sure you want to delete this?' do %>
+                            <i class="fa fa-trash"></i> Delete
+                        <% end %>
+                      </td>
+                    </tr>
+                <% end %>
+
+                </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="row">
   <div class="col-lg-6">
     <!---->
