--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -22,7 +22,7 @@
           <li><a class="page-scroll" href="#pricing">Agency<br>Login</a></li>
 
           <li><%= link_to auth_responders_path, class: 'page-scroll' do %>
-                Responder<br> Login
+              Responder<br> Login
             <% end %>
           </li>
         </ul>
@@ -681,89 +681,85 @@
       <div class="col-lg-12 text-center">
         <a href="mailto:test@email.com" class="btn btn-primary">Send us mail</a>
         <p class="m-t-sm">
-          Or follow us on social platform
+          Or follow us on twitter and facebook!
         </p>
         <ul class="list-inline social-icon">
-          <li><a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a>
-          </li>
+          <li><a href="https://twitter.com/respondersnow"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <!--<li><a href="#"><i class="fa fa-linkedin"></i></a>-->
+          <!--</li>-->
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-        <p><strong>&copy; 2015 Company Name</strong><br/> consectetur adipisicing elit. Aut eaque,
-          laboriosam veritatis,
-          quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+        <p><strong>&copy; 2018 Responders NOW LLC</strong><br/></p>
       </div>
     </div>
   </div>
 </section>
 <% content_for :javascript do %>
 
-    <script type="text/javascript">
+  <script type="text/javascript">
 
 
-        $(function () {
+      $(function () {
 
-            $('body').addClass('landing-page');
-            $('body').attr('id', 'page-top');
+          $('body').addClass('landing-page');
+          $('body').attr('id', 'page-top');
 
-            $('body').scrollspy({
-                target: '.navbar-fixed-top',
-                offset: 80
-            });
+          $('body').scrollspy({
+              target: '.navbar-fixed-top',
+              offset: 80
+          });
 
-            // Page scrolling feature
-            $('a.page-scroll').bind('click', function (event) {
-                var link = $(this);
-                $('html, body').stop().animate({
-                    scrollTop: $(link.attr('href')).offset().top - 50
-                }, 500);
-                event.preventDefault();
-                $("#navbar").collapse('hide');
-            });
+          // Page scrolling feature
+          $('a.page-scroll').bind('click', function (event) {
+              var link = $(this);
+              $('html, body').stop().animate({
+                  scrollTop: $(link.attr('href')).offset().top - 50
+              }, 500);
+              event.preventDefault();
+              $("#navbar").collapse('hide');
+          });
 
-            var cbpAnimatedHeader = (function () {
-                var docElem = document.documentElement,
-                    header = document.querySelector('.navbar-default'),
-                    didScroll = false,
-                    changeHeaderOn = 200;
+          var cbpAnimatedHeader = (function () {
+              var docElem = document.documentElement,
+                  header = document.querySelector('.navbar-default'),
+                  didScroll = false,
+                  changeHeaderOn = 200;
 
-                function init() {
-                    window.addEventListener('scroll', function (event) {
-                        if (!didScroll) {
-                            didScroll = true;
-                            setTimeout(scrollPage, 250);
-                        }
-                    }, false);
-                }
+              function init() {
+                  window.addEventListener('scroll', function (event) {
+                      if (!didScroll) {
+                          didScroll = true;
+                          setTimeout(scrollPage, 250);
+                      }
+                  }, false);
+              }
 
-                function scrollPage() {
-                    var sy = scrollY();
-                    if (sy >= changeHeaderOn) {
-                        $(header).addClass('navbar-scroll')
-                    }
-                    else {
-                        $(header).removeClass('navbar-scroll')
-                    }
-                    didScroll = false;
-                }
+              function scrollPage() {
+                  var sy = scrollY();
+                  if (sy >= changeHeaderOn) {
+                      $(header).addClass('navbar-scroll')
+                  }
+                  else {
+                      $(header).removeClass('navbar-scroll')
+                  }
+                  didScroll = false;
+              }
 
-                function scrollY() {
-                    return window.pageYOffset || docElem.scrollTop;
-                }
+              function scrollY() {
+                  return window.pageYOffset || docElem.scrollTop;
+              }
 
-                init();
+              init();
 
-            })();
+          })();
 
 
-        });
+      });
 
-    </script>
+  </script>
 
 <% end %>
