--- a/app/views/responders/auth.html.erb
+++ b/app/views/responders/auth.html.erb
@@ -92,7 +92,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2 class="font-bold">Welcome Responder!</h2>
-            <p>You're about to start your jorurney to excel at your career as an First Responder!</p>
+            <p>You're about to start your jorurney to excel at your career as a First Responder!</p>
             <p>This is the start. Responders are only allowed one account. The way that we match you with new careers
               depends
               on the pool..</p>
@@ -104,7 +104,7 @@
             </p>
             <hr>
             <%= link_to responder_facebook_omniauth_authorize_path, class: 'btn btn-success btn-facebook' do %>
-                <i class="fa fa-facebook"> </i> Sign in with Facebook
+              <i class="fa fa-facebook"> </i> Sign in with Facebook
             <% end %>
           </div>
         </div>
